<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:text="@string/net"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textAlignment="center"
        android:textSize="15sp"
        android:layout_marginEnd="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/downloads"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="15sp"
            android:layout_marginEnd="10dp"/>
        <TextView android:id="@+id/download_speed"
            android:text="@string/zerok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/downloadp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="15sp"
            android:layout_marginEnd="10dp"/>
        <TextView android:id="@+id/download_packet"
            android:text="@string/zero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/uploads"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="15sp"
            android:layout_marginEnd="10dp"/>
        <TextView android:id="@+id/upload_speed"
            android:text="@string/zerok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/uploadp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="15sp"
            android:layout_marginEnd="10dp"/>
        <TextView android:id="@+id/upload_packet"
            android:text="@string/zero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:text="@string/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="15sp"
        android:layout_marginEnd="10dp"/>
    <TextView android:id="@+id/info"
        android:text="@string/disconnected" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/IP"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_marginEnd="5dp"/>
        <EditText android:id="@+id/ip"
            android:text="@string/server_ip"
            android:layout_width="250dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/PORT"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_marginEnd="10dp"/>
        <EditText android:id="@+id/port"
            android:text="@string/server_port"
            android:layout_width="250dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <Button
        android:id="@+id/connect_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect"/>
</LinearLayout>
